crates/bsql/tests/compile_fail/type_mismatch_i32_for_text.rs
// i32 cannot be used for text column
fn main() {
    let login = 42i32;
    let _ = bsql::query!(
        "SELECT id FROM users WHERE login = $login: i32"
    );
}
